[gd_scene load_steps=9 format=3 uid="uid://tyk513g7amsn"]

[ext_resource type="Script" uid="uid://bytph4p4ehaq" path="res://scenes/egg/egg_game.gd" id="1_8d3q0"]
[ext_resource type="PackedScene" uid="uid://kdhs8in64j0x" path="res://scenes/egg/egg.tscn" id="1_mh6vc"]
[ext_resource type="Texture2D" uid="uid://b6jqa3s1gg7g5" path="res://assets/egg/background.png" id="2_wvl8l"]
[ext_resource type="Texture2D" uid="uid://dn586k784kcys" path="res://assets/egg/egg_basket.png" id="3_nrl2o"]
[ext_resource type="Texture2D" uid="uid://c0vvmpvcgqlsc" path="res://assets/egg/little_egg.png" id="4_jwhts"]
[ext_resource type="Texture2D" uid="uid://bvcct31yun0p3" path="res://assets/egg/speech_bubble.png" id="6_wvl8l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wvl8l"]
size = Vector2(338, 200)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8d3q0"]
size = Vector2(950.5, 529)

[node name="egg_game" type="Node2D"]
script = ExtResource("1_8d3q0")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(960, 811)
texture = ExtResource("2_wvl8l")

[node name="egg" parent="." instance=ExtResource("1_mh6vc")]
position = Vector2(203, 824)
scale = Vector2(1.225, 1.225)

[node name="basket" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="basket"]
position = Vector2(1669.5521, 905.74994)
scale = Vector2(0.3671042, 0.33459193)
texture = ExtResource("3_nrl2o")

[node name="collision" type="Area2D" parent="basket"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="basket/collision"]
position = Vector2(1667, 906)
shape = SubResource("RectangleShape2D_wvl8l")

[node name="small_egg" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="small_egg"]
texture = ExtResource("4_jwhts")

[node name="droppable_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="droppable_area"]
position = Vector2(480, 811)
shape = SubResource("RectangleShape2D_8d3q0")

[node name="score_label" type="Label" parent="."]
offset_left = 10.0
offset_top = 572.0
offset_right = 927.0
offset_bottom = 595.0
horizontal_alignment = 2

[node name="egg_label" type="Label" parent="."]
offset_left = 989.0
offset_top = 572.0
offset_right = 1029.0
offset_bottom = 599.0

[node name="speech_bubble" type="Node2D" parent="."]

[node name="speech_label" type="Label" parent="speech_bubble"]
offset_left = 415.0
offset_top = 610.0
offset_right = 604.0
offset_bottom = 716.0
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Sprite2D" type="Sprite2D" parent="speech_bubble"]
position = Vector2(506, 684)
scale = Vector2(0.275, 0.275)
texture = ExtResource("6_wvl8l")

[node name="instruction_label" type="Label" parent="."]
visible = false
offset_left = 289.0
offset_top = 590.0
offset_right = 639.0
offset_bottom = 617.0
text = "leave eggs here"
horizontal_alignment = 1

[node name="instruction2_label" type="Label" parent="."]
visible = false
offset_left = 1301.0
offset_top = 589.0
offset_right = 1526.0
offset_bottom = 612.0
text = "DON'T leave eggs here"
